<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">IDPWMemo ICS</string>
    <!-- MainActivity Menu -->
    <string name="main_button_add_new_memo">ADD NEW MEMO</string>
    <string name="main_button_import_memo">" IMPORT "</string>
    <!-- MemoViewActivity -->
    <string name="memo_view_title">Memo View</string>
    <string name="memo_view_label_details">DETAILS</string>
    <string name="memo_view_label_secrets">SECRETS</string>
    <string name="memo_view_label_lastupdate">Last Update</string>
    <string name="memo_view_button_add_new_service">ADD NEW SERVICE</string>
    <string name="memo_view_button_import_services">" IMPORT "</string>
    <string name="memo_view_button_add_new_value">ADD NEW VALUE</string>
    <!-- NewMemoDialog -->
    <string name="new_memo_dialog_title">New Memo</string>
    <string name="new_memo_dialog_caution">allow character: A&#8211;Z a&#8211;z 0&#8211;9 _ - ( ) [ ]</string>
    <string name="new_memo_dialog_hint">Memo Name</string>
    <!-- ImportMemoDialog -->
    <string name="import_memo_dialog_title">Import Memo</string>
    <!-- OpenPasswordDialog -->
    <string name="open_password_dialog_title">Password</string>
    <string name="open_password_dialog_hint">Password</string>
    <!-- NewServiceDialog -->
    <string name="new_service_dialog_title">New Service</string>
    <string name="new_service_dialog_hint">Service Name</string>
    <!-- NewValueDialog -->
    <string name="new_value_dialog_title">New Value</string>
    <string name="new_value_dialog_value_type_caption">Value Type</string>
    <string name="new_value_dialog_value_caption">Value</string>
    <string name="new_value_dialog_hint">Value</string>
    <!-- ImportServicesDialog -->
    <string name="import_services_dialog_title">Import Services</string>
    <string name="import_services_dialog_password_caption">Import Password</string>
    <string name="import_services_dialog_password_hint">Password</string>
    <string name="import_services_dialog_data_caption">Import Data</string>
    <string name="import_services_dialog_data_hint">Base64 Encoded Data</string>
    <!-- MemoMenuDialog -->
    <string name="memo_menu_dialog_open">OPEN</string>
    <string name="memo_menu_dialog_export">EXPORT</string>
    <string name="memo_menu_dialog_change_password">CHANGE PASSWORD</string>
    <string name="memo_menu_dialog_delete">DELETE</string>
    <!-- ChangePasswordDialog -->
    <string name="change_password_dialog_caption_for_old">Old Password</string>
    <string name="change_password_dialog_hint_for_old">Old Password</string>
    <string name="change_password_dialog_caption_for_new">New Password</string>
    <string name="change_password_dialog_hint_for_new">New Password</string>
    <!-- DeleteMemoDialog -->
    <string name="delete_memo_dialog_title">DELETE</string>
    <string name="delete_memo_dialog_caption">switch to delete and tap OK if you want</string>
    <string name="delete_memo_dialog_switch_keep">keep this memo</string>
    <string name="delete_memo_dialog_switch_delete">DELETE this memo</string>
    <!-- ExportMemoDialog -->
    <string name="export_memo_dialog_title">EXPORT</string>
    <string name="export_memo_dialog_caption1">export to Downloads directory</string>
    <string name="export_memo_dialog_caption2">choice export file name</string>
    <!-- ServiceMenuDialog -->
    <string name="service_menu_dialog_show">SHOW</string>
    <string name="service_menu_dialog_export">EXPORT</string>
    <string name="service_menu_dialog_delete">DELETE</string>
    <!-- ValueMenuDialog -->
    <string name="value_menu_dialog_copy">COPY TO CLIPBOARD</string>
    <string name="value_menu_dialog_edit">EDIT</string>
    <string name="value_menu_dialog_delete">DELETE</string>
    <!-- DeleteServiceDialog -->
    <string name="delete_service_dialog_title">DELETE</string>
    <string name="delete_service_dialog_caption">switch to delete and tap OK if you want</string>
    <string name="delete_service_dialog_switch_keep">keep this service</string>
    <string name="delete_service_dialog_switch_delete">DELETE this service</string>
    <!-- DeleteValueDialog -->
    <string name="delete_value_dialog_title">DELETE</string>
    <string name="delete_value_dialog_caption">switch to delete and tap OK if you want</string>
    <string name="delete_value_dialog_switch_keep">keep this value</string>
    <string name="delete_value_dialog_switch_delete">DELETE this value</string>
    <!-- EditValueDialog -->
    <string name="edit_value_dialog_title">Edit Value</string>
    <string name="edit_value_dialog_value_type_caption">Value Type</string>
    <string name="edit_value_dialog_value_caption">Value</string>
    <string name="edit_value_dialog_hint">Value</string>
    <!-- ExportPasswordDialog -->
    <string name="export_password_dialog_title">EXPORT</string>
    <string name="export_password_dialog_hint">Export Password</string>
    <!-- ExportServiceDialog -->
    <string name="export_service_dialog_title">EXPORT</string>
    <!-- Toast (Infomation Message) -->
    <string name="info_duplicate_memo_name">the memo name already exists</string>
    <string name="info_success_add_new_memo">successfully added a new memo</string>
    <string name="info_success_import_memo">successfully imported memo</string>
    <string name="info_success_export_memo">successfully exported memo</string>
    <string name="info_success_add_new_service">successfully added a new service</string>
    <string name="info_success_add_new_value">successfully added a new value</string>
    <string name="info_success_import_services">successfully imported all services</string>
    <string name="info_success_change_password">successfully set new password</string>
    <string name="info_success_delete_memo">successfully deleted the memo</string>
    <string name="info_success_delete_service">successfully deleted the service</string>
    <string name="info_success_delete_value">successfully deleted the value</string>
    <string name="info_success_update_value">successfully updated the value</string>
    <string name="info_wrong_password">wrong password</string>
    <string name="info_wrong_old_password">wrong old password</string>
    <string name="info_wrong_data_format">wrong data format</string>
    <string name="info_no_data">no data</string>
    <string name="info_copied_to_clipboard">copied</string>
    <string name="info_storage_is_not_ready">storage is not ready</string>
    <!-- Toast (Error Message) -->
    <string name="errmsg_internal_error">internal error</string>
</resources>
