<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
  <TextView android:id="@android:id/empty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/import_services_dialog_password_caption" />
  <EditText android:id="@+id/import_services_dialog_password"
            tools:ignore="TextFields"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:inputType="text"
            android:importantForAutofill="no"
            android:autofillHints="notApplicable"
            android:hint="@string/import_services_dialog_password_hint" />
  <TextView android:id="@android:id/empty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/import_services_dialog_data_caption" />
  <EditText android:id="@+id/import_services_dialog_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="false"
            android:inputType="textMultiLine"
            android:importantForAutofill="no"
            android:autofillHints="notApplicable"
            android:minLines="3"
            android:hint="@string/import_services_dialog_data_hint" />
</LinearLayout>
